@@ -1,3 +1,8 @@
+2007-03-21  Neil J. Patel  <njpatel@gmail.com>
+
+	* Bar now automatically resizes when it is too big for screen
+
+
 2007-03-21  Neil Jagdish Patel  <njpatel@gmail.com>
 
 	* Better auto-hide animation.
